feat: 챗봇 기능 구현
- 비로그인/로그인 사용자 모두 지원
- 규칙 기반 답변 시스템 구현
- 대화 내역 조회 및 삭제 기능
- 페이지네이션 및 권한 체크 적용
- CommonResponse 형태로 API 응답 통일

# Conflicts:
#	src/main/java/BuyThisDoHippo/Mapoop/global/error/CustomErrorCode.java

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,9 @@ jwt:
   secret: ${JWT_SECRET}
   access-token-expiration: 3600000  # 1시간 (밀리초)
   refresh-token-expiration: 604800000  # 7일 (밀리초)
+
+# OpenAI API 설정
+openai:
+  api:
+    key: ${OPENAI_API_KEY:your-api-key-here}
+    url: https://api.openai.com/v1/chat/completions
