--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 
 	// JSON 처리
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
+
+	// OpenAI GPT API
+	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
 }
 
 tasks.named('test') {
