--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,8 @@ jwt:
   secret: ${JWT_SECRET}
   access-token-expiration: 3600000  # 1시간 (밀리초)
   refresh-token-expiration: 604800000  # 7일 (밀리초)
+
+google:
+  maps:
+    api:
+      key: ${GOOGLE_MAPS_API_KEY}
