--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,8 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
 
 	// OpenAI GPT API
-	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
+	implementation 'com.openai:openai-java:3.0.2'
+	implementation 'com.openai:openai-java-client-okhttp:3.0.2' // OkHttp 기반 클라이언트
 
 
 }
