feat(review): 리뷰 서비스 기본 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Mapoop
+
+# MCP (Model Context Protocol) ??
+mcp.enabled=true
+mcp.server.url=http://localhost:3000
+mcp.websocket.enabled=true
+mcp.timeout=30000
+
+# WebSocket ??
+spring.websocket.enabled=true
