--- a/build.gradle
+++ b/build.gradle
@@ -51,13 +51,16 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
 
 	// OpenAI GPT API
-<<<<<<< HEAD
 	implementation 'com.openai:openai-java:3.0.2'
 	implementation 'com.openai:openai-java-client-okhttp:3.0.2' // OkHttp 기반 클라이언트
-=======
-	implementation 'com.theokanning.openai-gpt3-java:service:0.18.2'
->>>>>>> 3b9ee027ee95d75048a94225ccc35ffb73abf47b
 
+	// MCP (Model Context Protocol) 관련
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	implementation 'com.fasterxml.jackson.core:jackson-core'
+	implementation 'com.fasterxml.jackson.core:jackson-annotations'
+	
+	// HTTP 클라이언트 (MCP 서버 통신용)
+	implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1'
 
 }
 
