--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,7 +34,7 @@ jwt:
 openai:
   api:
     key: ${OPENAI_API_KEY}
-    model: ${OPENAI_MODEL:gpt-3.5-turbo}
+    model: ${OPENAI_MODEL:gpt-4o-mini}
     url: https://api.openai.com/v1/chat/completions
 
 # Kakao API 설정
