--- a/src/main/resources/application-release.yml
+++ b/src/main/resources/application-release.yml
@@ -44,7 +44,7 @@ jwt:
 openai:
   api:
     key: ${OPENAI_API_KEY}
-    model: ${OPENAI_MODEL:gpt-3.5-turbo}
+    model: ${OPENAI_MODEL}
     url: https://api.openai.com/v1/chat/completions
 
 # Kakao
